linked or appended objects appear always on a firm selection of layers (file specific issue) #41905

Closed
opened 2014-09-22 09:53:41 +02:00 by Heiko Schmidt · 11 comments

System Information
Win 7 64 bit and Nvidia GTX 770

Blender Version
Broken: 2.71 f6db580

I have attached a file. If you now append or link objects groups etc. The objects are then assigned not to the currently visible layers but always to one and the same layers. Those layers had objects which I have deleted. I can not remember what I did or what happened so no way to reproduce this but maybe someone else has an idea.

test.zip

**System Information** Win 7 64 bit and Nvidia GTX 770 **Blender Version** Broken: 2.71 f6db580 I have attached a file. If you now append or link objects groups etc. The objects are then assigned not to the currently visible layers but always to one and the same layers. Those layers had objects which I have deleted. I can not remember what I did or what happened so no way to reproduce this but maybe someone else has an idea. [test.zip](https://archive.blender.org/developer/F111617/test.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @heik

Added subscriber: @heik

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The file has no objects in it, not sure how to redo this bug.

Can you list exact steps?

The file has no objects in it, not sure how to redo this bug. Can you list exact steps?
Author

I have to correct myself it only concerns the 'linking' of objects and groups.

steps to redo:

Open the attached file and select link and choose from any file just available for example objects or groups and as a result the objects occupy always the same layers. This layers had previously objects which I have deleted. Layers which never had objects inside are not affected.

I have an older file (of the same project) dated 6.2013 which has only the first three layers in use with the same result. If I link something from another file the objects appear not inside the active layer but on layers 1,2 and 3.

This also seems to concern just this file. I tried this with many previous blender official releases with the same result.

Unfortunately I can not tell what I did to get this or when it happens.

I have to correct myself it only concerns the 'linking' of objects and groups. steps to redo: Open the attached file and select link and choose from any file just available for example objects or groups and as a result the objects occupy always the same layers. This layers had previously objects which I have deleted. Layers which never had objects inside are not affected. I have an older file (of the same project) dated 6.2013 which has only the first three layers in use with the same result. If I link something from another file the objects appear not inside the active layer but on layers 1,2 and 3. This also seems to concern just this file. I tried this with many previous blender official releases with the same result. Unfortunately I can not tell what I did to get this or when it happens.

This issue was referenced by b4efe25119

This issue was referenced by b4efe251196b2bfa7334878bace6049b7700a81d
Bastien Montagne self-assigned this 2014-09-29 14:01:21 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b4efe25119.

Closed by commit b4efe25119.

So, for the records - my mistake, there was no real bug here, except the fact that it was using scene's visible layers instead of scene's active layer.

But main 'issue' of from your PoV imho was that you had disabled sync between 3DView's layer selection and Scene's one (little 'chain' icon in 3DView header). This has the side effect of using 3DView active layer when hitting ctrl-alt-O from the 3DView, while using scene one when e.g. calling Link from the main menu.

So, for the records - my mistake, there was no real bug here, except the fact that it was using scene's visible layers instead of scene's active layer. But main 'issue' of from your PoV imho was that you had disabled sync between 3DView's layer selection and Scene's one (little 'chain' icon in 3DView header). This has the side effect of using 3DView active layer when hitting `ctrl-alt-O` from the 3DView, while using scene one when e.g. calling Link from the main menu.
Author

Learned something new today. :)

Learned something new today. :)

This issue was referenced by f0dd7f1336

This issue was referenced by f0dd7f133673075f4a5c5d1cece4a962b04f0d42
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41905
No description provided.