Fix T41905: Linked objects/groups assigned to 'wrong' active layers when called from 3DView

Typo using v3d->layact instead of v3d->lay when linking and v3d is available in context.

This can be backported to 2.72.